--- a/wp-content/themes/trek-travel-theme/src/scss/pages/common.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/pages/common.scss
@@ -8,10 +8,8 @@ body.lity-login-modal .lity {
 
 .lity-active button.lity-close {
   position: absolute;
-    top: -20px;
-    right: -20px;
-    background-color: $blue;
-    border-radius: 50%;
+  color: black;
+  transition: all 0.5s;
 }
 
 #login-register-modal {
@@ -25,12 +23,13 @@ body.lity-login-modal .lity {
 
   .sign-logo {
     display: flex;
+    padding: 20px 0;
 
     img {
       display: flex;
       object-fit: contain;
       width: 100%;
-      max-height: 150px;
+      max-height: 100px;
     }
   }
 
