mobile menu wip

--- a/wp-content/themes/trek-travel-theme/assets/css/main.css
+++ b/wp-content/themes/trek-travel-theme/assets/css/main.css
@@ -23385,6 +23385,10 @@ form.trek-trip-finder-form input:hover, form.trek-trip-finder-form i:hover {
   }
 }
 
+.lity {
+  z-index: 10000 !important;
+}
+
 body.lity-login-modal .lity {
   background: rgba(0, 0, 0, 0.3);
   backdrop-filter: blur(3px);
