--- a/wp-content/themes/trek-travel-theme/src/scss/_forms.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_forms.scss
@@ -29,6 +29,13 @@
     margin-bottom: 1rem !important;
 }
 
+.ginput_container_select, .ginput_container_multiselect{
+    .ts-wrapper {
+        border: 1px solid black !important;
+        border-radius: 3px;
+        padding: 5px 10px !important;
+    }
+}
 .login-form,
 .reset-form {
     margin-top: 6rem;
