--- a/wp-content/themes/trek-travel-theme/src/scss/pages/testimonials.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/pages/testimonials.scss
@@ -59,24 +59,61 @@
         background-color: black;
         padding: 50px 0;
 
-        .swiper-button-prev,
-            .swiper-button-next {
-              color: $blue;
+        .swiper-nav {
+            display: flex;
+            align-items: center;
+            position: relative;
+            width: fit-content;
+            margin: auto;
+            padding-top: 10px;
+
+        .s-btn-prev,
+            .s-btn-next {
+                position: relative;
+                &::after {
+                    font-family: 'Font Awesome 6 Pro';
+                    color: white;
+                    font-size: 1.75rem;
+                }
             }
 
-            .swiper-button-next {
+            .s-btn-next {
                 right: var(--swiper-navigation-sides-offset,-5px);
+                &::after {
+                    content: '\f054';
+                }
             }
-            .swiper-button-prev {
+            .s-btn-prev {
                 left: var(--swiper-navigation-sides-offset,-5px);
+                &::after {
+                    content: '\f053';
+                }
+               
             }
+
+            .swiper-pagination {
+                position: relative;
+                padding: 5px 30px;
+                bottom: auto;
+             }
+ 
+             .swiper-pagination-bullet {
+                 width: 15px;
+                 height: 15px;
+                 background: white;
+ 
+                 &.swiper-pagination-bullet-active {
+                     background: $blue;
+                 }
+             }
 
         @include media-breakpoint-up(xl) {
-            .swiper-button-prev,
-            .swiper-button-next {
+            .s-btn-prev,
+            .s-btn-next {
               display: none !important;
             }
           }
+        }
 
         .m-header {
             margin-bottom: 50px;
@@ -86,15 +123,7 @@
             overflow: visible;
             padding-bottom: 50px;
 
-            .swiper-pagination-bullet {
-                width: 15px;
-                height: 15px;
-                background: white;
-
-                &.swiper-pagination-bullet-active {
-                    background: $blue;
-                }
-            }
+            
         }
 
         .row {
@@ -175,6 +204,16 @@
                     color: #fff;
                     text-shadow: 0 0 8px rgba(0, 0, 0, 0.7);
                   }
+
+                  .play-icon-overlay {
+                    &::before {
+                        content: '\f144'; // Font Awesome play icon
+                        font-family: 'Font Awesome 6 Pro';
+                        font-weight: 700;
+                        color: white;
+                        font-size: 2.5rem;
+                    }
+                  }
               
                   .video-overlay-text {
                     position: absolute;
@@ -239,12 +278,15 @@
         background-color: $gray-200;
 
         .f-box {
+
+            form, .gform_confirmation_message {
             background-color: white;
             -webkit-box-shadow: 0px 10px 15px 2px rgba(0, 0, 0, 0.3);
             box-shadow: 0px 10px 15px 2px rgba(0, 0, 0, 0.3);
             border: 3px solid $blue;
             border-radius: 5px;
             padding: 30px;
+            }
     
             .gform-theme--foundation .gfield textarea.large {
                 min-block-size: 10rem;
