--- a/wp-content/themes/trek-travel-theme/src/scss/_footer.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_footer.scss
@@ -250,6 +250,13 @@
         }
     }
 
+    .recognised-by {
+        .img-item {
+            object-fit: contain;
+            width: 100%;
+        }
+    }
+
     .menu-title {
         font-size: $font-size-base;
         font-weight: $font-weight-medium;
