--- a/wp-content/themes/trek-travel-theme/src/scss/pages/common.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/pages/common.scss
@@ -1,5 +1,13 @@
 // Login Register Modal
 
+body.lity-login-modal #quickLookModal {
+  z-index: 9998;
+  pointer-events: none;
+}
+body.lity-login-modal .modal-backdrop {
+  z-index: 9997;
+}
+
 .lity {
   z-index: 10000 !important; // Ensure it appears above other content
 }
